--- a/src/main/resources/templates/admin/user/user_form.html
+++ b/src/main/resources/templates/admin/user/user_form.html
@@ -16,7 +16,7 @@
 <body>
 <div class="container-fluid">
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-        <a href="" class="navbar-brand" th:href="@{/}">
+        <a href="" class="navbar-brand" th:href="@{/static}">
             <img th:src="@{/images/ShopmeAdminSmall.png}" alt="Image error">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavbar">
@@ -62,41 +62,73 @@
     </nav>
 </div>
 <div>
-    <h2>User manager</h2>
-    <div>
-        <table class="table table-responsive-xl table-striped table-bordered">
-            <thead class="thead-dark">
-            <tr class="text-center">
-                <th>User ID</th>
-                <th>Photos</th>
-                <th>E-mail</th>
-                <th>First name</th>
-                <th>Last name</th>
-                <th>Roles</th>
-                <th>Enabled</th>
-                <th>Action</th>
-            </tr>
-            </thead>
-            <tbody class="text-center">
-            <tr th:each="user, state: ${listUsers}">
-                <td th:text="${user.id}"></td>
-                <td></td>
-                <td>[[${user.email}]]</td>
-                <td>[[${user.firstName}]]</td>
-                <td>[[${user.lastName}]]</td>
-                <td>[[${user.roles}]]</td>
-                <td>[[${user.enabled}]]</td>
-                <td>
-                    <button>edit</button>
-                    <button>delete</button>
-                </td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
+    <h2>User manager | Create new user</h2>
+    <button class="btn btn-warning" style="margin-bottom: 1rem;">
+        <a style="color: white;text-decoration: none;" th:href="@{/shopme/admin/users/new}">Back</a>
+    </button>
+    <form th:action="@{/shopme/admin/users/save}" method="post" th:object="${user}" style="max-width: 700px; margin: 0 auto">
+        <div class="border border-secondary rounded p-3">
+            <div class="form-group row mb-3">
+                <label class="col-sm-4 col-form-label">E-mail</label>
+                <div class="col-sm-8">
+                    <input type="email" class="form-control" th:field="*{email}" required minlength="8" maxlength="128">
+                </div>
+            </div>
+            <div class="form-group row mb-3">
+                <label class="col-sm-4 col-form-label">First name</label>
+                <div class="col-sm-8">
+                    <input type="text" class="form-control" th:field="*{firstName}" required minlength="3" maxlength="45">
+                </div>
+            </div>
+            <div class="form-group row mb-3">
+                <label class="col-sm-4 col-form-label">Last name</label>
+                <div class="col-sm-8">
+                    <input type="text" class="form-control" th:field="*{lastName}" required minlength="3" maxlength="45">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label class="col-sm-4 col-form-label">Password</label>
+                <div class="col-sm-8">
+                    <input type="password" class="form-control" th:field="*{password}" required minlength="8" maxlength="20">
+                </div>
+            </div>
+            <div class="form-group row mb-3">
+                <label class="col-sm-4 col-form-label">Roles</label>
+                <div class="col-sm-8">
+                    <th:block th:each="role: ${listRoles}">
+                        <div class="form-check">
+                            <input type="checkbox" class="form-check-input" th:field="*{roles}" th:value="${role.id}" />
+                            <label class="form-check-label" th:for="${'role' + role.id}" th:text="${role.name}"></label>
+                            - <small th:text="${role.description}"></small>
+                        </div>
+                    </th:block>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label class="col-sm-4 col-form-label">Enabled</label>
+                <div class="col-sm-8">
+                    <input type="checkbox" class="form-check-input" th:field="*{enabled}">
+                </div>
+            </div>
+
+            <div class="text-center">
+                <input type="submit" value="Save" class="btn btn-primary m-3">
+                <input type="button" value="Cancel" class="btn btn-secondary" id="buttonCancel">
+            </div>
+        </div>
+    </form>
 </div>
 <div class="text-center">
     <p>Shopme Control Panel - Copyright &copy; Shopme</p>
 </div>
 </body>
+
+<script type="text/javascript">
+    $(document).ready(function (){
+       $('#buttonCancel').on('click', function (){
+           window.location = "[[@{/shopme/admin/users}]]";
+       })
+    });
+
+</script>
 </html>
