--- a/src/main/resources/templates/admin/user/user_form.html
+++ b/src/main/resources/templates/admin/user/user_form.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"></script>
-    <!--    <link type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">-->
+        <link type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
     <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 </head>
@@ -62,34 +62,39 @@
     </nav>
 </div>
 <div>
-    <h2>User manager | Create new user</h2>
+    <h2 class="text-center">User manager | Create new user</h2>
     <button class="btn btn-warning" style="margin-bottom: 1rem;">
         <a style="color: white;text-decoration: none;" th:href="@{/shopme/admin/users/new}">Back</a>
     </button>
-    <form th:action="@{/shopme/admin/users/save}" method="post" th:object="${user}" style="max-width: 700px; margin: 0 auto">
+    <form th:action="@{/shopme/admin/users/save}" th:method="post" th:object="${user}"
+          style="max-width: 700px; margin: 0 auto" onsubmit="return checkEmailUnique(this)">
         <div class="border border-secondary rounded p-3">
             <div class="form-group row mb-3">
                 <label class="col-sm-4 col-form-label">E-mail</label>
                 <div class="col-sm-8">
-                    <input type="email" class="form-control" th:field="*{email}" required minlength="8" maxlength="128">
+                    <input type="email" class="form-control" id="email" th:field="*{email}" required minlength="8"
+                           maxlength="128">
                 </div>
             </div>
             <div class="form-group row mb-3">
                 <label class="col-sm-4 col-form-label">First name</label>
                 <div class="col-sm-8">
-                    <input type="text" class="form-control" th:field="*{firstName}" required minlength="3" maxlength="45">
+                    <input type="text" class="form-control" th:field="*{firstName}" required minlength="3"
+                           maxlength="45">
                 </div>
             </div>
             <div class="form-group row mb-3">
                 <label class="col-sm-4 col-form-label">Last name</label>
                 <div class="col-sm-8">
-                    <input type="text" class="form-control" th:field="*{lastName}" required minlength="3" maxlength="45">
+                    <input type="text" class="form-control" th:field="*{lastName}" required minlength="3"
+                           maxlength="45">
                 </div>
             </div>
             <div class="form-group row">
                 <label class="col-sm-4 col-form-label">Password</label>
                 <div class="col-sm-8">
-                    <input type="password" class="form-control" th:field="*{password}" required minlength="8" maxlength="20">
+                    <input type="password" class="form-control" th:field="*{password}" required minlength="8"
+                           maxlength="20">
                 </div>
             </div>
             <div class="form-group row mb-3">
@@ -97,7 +102,7 @@
                 <div class="col-sm-8">
                     <th:block th:each="role: ${listRoles}">
                         <div class="form-check">
-                            <input type="checkbox" class="form-check-input" th:field="*{roles}" th:value="${role.id}" />
+                            <input type="checkbox" class="form-check-input" th:field="*{roles}" th:value="${role.id}"/>
                             <label class="form-check-label" th:for="${'role' + role.id}" th:text="${role.name}"></label>
                             - <small th:text="${role.description}"></small>
                         </div>
@@ -117,6 +122,44 @@
             </div>
         </div>
     </form>
+<!--    <div class="modal fade text-center" id="modalDialog">-->
+<!--        <div class="modal-dialog">-->
+<!--            <div class="modal-content">-->
+<!--                <div class="modal-header">-->
+<!--                    <h4 class="modal-title" id="modalTitle">Warning</h4>-->
+<!--                    <button type="button" class="close" data-dismiss="modal">&times;</button>-->
+<!--                </div>-->
+<!--                <div class="modal-body">-->
+<!--                    <span id="modalBody"></span>-->
+<!--                </div>-->
+<!--                <div class="modal-footer">-->
+<!--                    <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalDialog">
+        Launch demo modal
+    </button>
+    <div class="modal fade" id="modalDialog" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalTitle">Warning</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <span id="modalBody"></span>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 <div class="text-center">
     <p>Shopme Control Panel - Copyright &copy; Shopme</p>
@@ -124,11 +167,37 @@
 </body>
 
 <script type="text/javascript">
-    $(document).ready(function (){
-       $('#buttonCancel').on('click', function (){
-           window.location = "[[@{/shopme/admin/users}]]";
-       })
+    $(document).ready(function () {
+        $('#buttonCancel').on('click', function () {
+            window.location = "[[@{/shopme/admin/users}]]";
+        })
     });
 
+    function checkEmailUnique(form) {
+        let url = "[[@{/shopme/admin/users/check-email}]]";
+        let csrfValue = $("input[name='_csrf']").val();
+        let userEmail = $('#email').val();
+        let params = {
+            email: userEmail,
+            _csrf: csrfValue
+        };
+
+        $.post(url, params, function (response) {
+            if (response == "Ok") {
+                form.submit();
+            } else if (response == "Duplicated") {
+                // showModalDialog("Duplicated email", "There is another user having the email " + userEmail);
+                alert("There is another user having the email " + userEmail);
+            }
+        });
+
+        return false;
+    }
+
+    function showModalDialog(title, message) {
+        $("#modalTitle").text(title);
+        $("#modalBody").text(message);
+        $("#modalDialog").modal();
+    }
 </script>
 </html>
