--- a/src/main/resources/templates/admin/user/user_form.html
+++ b/src/main/resources/templates/admin/user/user_form.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Home page</title>
+    <title>[[${pageTitle}]]</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -62,12 +62,13 @@
     </nav>
 </div>
 <div>
-    <h2 class="text-center">User manager | Create new user</h2>
+    <h2 class="text-center">User manager | [[${pageTitle}]]</h2>
     <button class="btn btn-warning" style="margin-bottom: 1rem;">
         <a style="color: white;text-decoration: none;" th:href="@{/shopme/admin/users/new}">Back</a>
     </button>
     <form th:action="@{/shopme/admin/users/save}" th:method="post" th:object="${user}"
           style="max-width: 700px; margin: 0 auto" onsubmit="return checkEmailUnique(this)">
+        <input type="hidden" th:field="*{id}" id="userId">
         <div class="border border-secondary rounded p-3">
             <div class="form-group row mb-3">
                 <label class="col-sm-4 col-form-label">E-mail</label>
@@ -93,8 +94,8 @@
             <div class="form-group row">
                 <label class="col-sm-4 col-form-label">Password</label>
                 <div class="col-sm-8">
-                    <input type="password" class="form-control" th:field="*{password}" required minlength="8"
-                           maxlength="20">
+                    <input th:if="${user.id == null}" type="password" class="form-control" th:field="*{password}" required minlength="8" maxlength="20">
+                    <input th:if="${user.id != null}" type="password" class="form-control" th:field="*{password}" minlength="8" maxlength="20">
                 </div>
             </div>
             <div class="form-group row mb-3">
@@ -174,10 +175,18 @@
     });
 
     function checkEmailUnique(form) {
+        let userId = $('#userId').val();
+
+        if (userId) {
+            form.submit();
+            return false;
+        }
+
         let url = "[[@{/shopme/admin/users/check-email}]]";
         let csrfValue = $("input[name='_csrf']").val();
         let userEmail = $('#email').val();
         let params = {
+            userId: userId,
             email: userEmail,
             _csrf: csrfValue
         };
@@ -193,6 +202,7 @@
 
         return false;
     }
+
 
     function showModalDialog(title, message) {
         $("#modalTitle").text(title);
