--- a/src/main/resources/templates/admin/user/users.html
+++ b/src/main/resources/templates/admin/user/users.html
@@ -73,7 +73,7 @@
     <button class="btn btn-success" style="margin-bottom: 1rem;">
         <a style="color: white;text-decoration: none;" th:href="@{/shopme/admin/users/new}">Create user</a>
     </button>
-    <div th:if="${message}" class="message">
+    <div th:if="${message}" class="message text-center">
         <p class="alert alert-success" id="successMessage">[[${message}]]</p>
     </div>
     <div>
@@ -102,7 +102,7 @@
                 <td th:if="${user.enabled == true}"><i class="fas fa-check-circle fa-2x icon-green"></i></td>
                 <td th:if="${user.enabled == false}"><i class="fas fa-check-circle fa-2x icon-dark"></i></td>
                 <td>
-                    <button><i class="fas fa-edit fa-2x icon-green"></i></button>
+                    <button><a class="fas fa-edit fa-2x icon-green" title="Update this user" th:href="@{'/shopme/admin/users/edit/' + ${user.id}}"></a></button>
                     <button><i class="fas fa-trash fa-2x icon-dark"></i></button>
                 </td>
             </tr>
