--- a/src/main/resources/templates/admin/user/users.html
+++ b/src/main/resources/templates/admin/user/users.html
@@ -97,14 +97,18 @@
                 <td>[[${user.firstName}]]</td>
                 <td>[[${user.lastName}]]</td>
                 <td>[[${user.roles}]]</td>
-                <td th:if="${user.enabled == true}"><i class="fas fa-check-circle fa-2x icon-green"></i></td>
-                <td th:if="${user.enabled == false}"><i class="fas fa-check-circle fa-2x icon-dark"></i></td>
+                <td>
+                    <a style="text-decoration: none;" th:if="${user.enabled == true}" th:href="@{'/shopme/admin/users/' + ${user.id}
+                + '/enabled/false'}" class="fas fa-check-circle fa-2x icon-green"></a>
+                    <a style="text-decoration: none;" th:if="${user.enabled == false}" th:href="@{'/shopme/admin/users/' + ${user.id}
+                + '/enabled/true'}" class="fas fa-check-circle fa-2x icon-dark"></a>
+                </td>
                 <td>
                     <button><a class="fas fa-edit fa-2x icon-green" title="Update this user"
                                th:href="@{'/shopme/admin/users/edit/' + ${user.id}}"></a></button>
 
-                    <!-- Thêm thuộc tính data-user-id để lưu trữ userId -->
-                    <button type="button" class="btn btn-primary delete-user" th:data-user-id="${user.id}" data-toggle="modal" data-target="#deleteUserModal">
+                    <button type="button" class="btn btn-primary delete-user" th:data-user-id="${user.id}"
+                            data-toggle="modal" data-target="#deleteUserModal">
                         <i class="fas fa-trash fa-2x icon-dark"></i>
                     </button>
 
@@ -124,7 +128,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <input type="hidden" id="csrfToken" th:value="${_csrf.token}" />
+                <input type="hidden" id="csrfToken" th:value="${_csrf.token}"/>
             </div>
             <div class="modal-body">
                 Are you sure you want to delete this user?
@@ -132,7 +136,7 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                 <!-- Thêm input hidden để lưu trữ userId -->
-                <input type="hidden" id="modalUserId" />
+                <input type="hidden" id="modalUserId"/>
                 <button type="button" class="btn btn-primary" id="confirmDelete">Yes, delete it</button>
             </div>
         </div>
