--- a/src/main/resources/templates/admin/user/user_form.html
+++ b/src/main/resources/templates/admin/user/user_form.html
@@ -117,6 +117,14 @@
                 </div>
             </div>
 
+            <div class="form-group row">
+                <label class="col-sm-4 col-form-label">Photos</label>
+                <div class="col-sm-8">
+                    <input type="file" id="fileImage" accept="image/jpeg, image/png">
+                    <img th:src="@{/images/default-user.png}" class="img-fluid" style="height: 80px" alt="image error" id="thumbnail">
+                </div>
+            </div>
+
             <div class="text-center">
                 <input type="submit" value="Save" class="btn btn-primary m-3">
                 <input type="button" value="Cancel" class="btn btn-secondary" id="buttonCancel">
@@ -140,9 +148,6 @@
 <!--        </div>-->
 <!--    </div>-->
 
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalDialog">
-        Launch demo modal
-    </button>
     <div class="modal fade" id="modalDialog" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -172,7 +177,22 @@
         $('#buttonCancel').on('click', function () {
             window.location = "[[@{/shopme/admin/users}]]";
         })
+
+        $('#fileImage').change( function (){
+            showImageThumbnail(this);
+        })
     });
+
+    function showImageThumbnail(fileInput) {
+        var file = fileInput.files[0];
+        var reader = new FileReader();
+
+        reader.onload = function (e){
+            $('#thumbnail').attr("src", e.target.result);
+        }
+
+        reader.readAsDataURL(file);
+    }
 
     function checkEmailUnique(form) {
         let userId = $('#userId').val();
