--- a/src/main/resources/templates/admin/user/user_form.html
+++ b/src/main/resources/templates/admin/user/user_form.html
@@ -66,7 +66,7 @@
     <button class="btn btn-warning" style="margin-bottom: 1rem;">
         <a style="color: white;text-decoration: none;" th:href="@{/shopme/admin/users/new}">Back</a>
     </button>
-    <form th:action="@{/shopme/admin/users/save}" th:method="post" th:object="${user}"
+    <form th:action="@{/shopme/admin/users/save}" th:method="post" th:object="${user}" enctype="multipart/form-data"
           style="max-width: 700px; margin: 0 auto" onsubmit="return checkEmailUnique(this)">
         <input type="hidden" th:field="*{id}" id="userId">
         <div class="border border-secondary rounded p-3">
@@ -120,7 +120,7 @@
             <div class="form-group row">
                 <label class="col-sm-4 col-form-label">Photos</label>
                 <div class="col-sm-8">
-                    <input type="file" id="fileImage" accept="image/jpeg, image/png">
+                    <input type="file" id="fileImage" accept="image/jpeg, image/png" name="image" >
                     <img th:src="@{/images/default-user.png}" class="img-fluid" style="height: 80px" alt="image error" id="thumbnail">
                 </div>
             </div>
