--- a/src/main/resources/templates/admin/user/user_form.html
+++ b/src/main/resources/templates/admin/user/user_form.html
@@ -64,7 +64,7 @@
 <div>
     <h2 class="text-center">User manager | [[${pageTitle}]]</h2>
     <button class="btn btn-warning" style="margin-bottom: 1rem;">
-        <a style="color: white;text-decoration: none;" th:href="@{/shopme/admin/users/new}">Back</a>
+        <a style="color: white;text-decoration: none;" th:href="@{/shopme/admin/users}">Back</a>
     </button>
     <form th:action="@{/shopme/admin/users/save}" th:method="post" th:object="${user}" enctype="multipart/form-data"
           style="max-width: 700px; margin: 0 auto" onsubmit="return checkEmailUnique(this)">
@@ -121,7 +121,7 @@
                 <label class="col-sm-4 col-form-label">Photos</label>
                 <div class="col-sm-8">
                     <input type="file" id="fileImage" accept="image/jpeg, image/png" name="image" >
-                    <img th:src="@{/images/default-user.png}" class="img-fluid" style="height: 80px" alt="image error" id="thumbnail">
+                    <img th:src="@{${user.getPhotoImagePath()}}" class="img-fluid" style="height: 80px" alt="Photo preview" id="thumbnail">
                 </div>
             </div>
 
