--- a/src/main/resources/templates/admin/user/user_form.html
+++ b/src/main/resources/templates/admin/user/user_form.html
@@ -120,6 +120,7 @@
             <div class="form-group row">
                 <label class="col-sm-4 col-form-label">Photos</label>
                 <div class="col-sm-8">
+                    <input type="hidden" th:field="*{photos}">
                     <input type="file" id="fileImage" accept="image/jpeg, image/png" name="image" >
                     <img th:src="@{${user.getPhotoImagePath()}}" class="img-fluid" style="height: 80px" alt="Photo preview" id="thumbnail">
                 </div>
