--- a/src/main/resources/templates/admin/user/users.html
+++ b/src/main/resources/templates/admin/user/users.html
@@ -107,12 +107,12 @@
                 + '/enabled/true'}" class="fas fa-check-circle fa-2x icon-dark"></a>
                 </td>
                 <td>
-                    <button><a class="fas fa-edit fa-2x icon-green" title="Update this user"
-                               th:href="@{'/shopme/admin/users/edit/' + ${user.id}}"></a></button>
+                    <a class="fas fa-edit fa-2x icon-green" title="Update this user"
+                               th:href="@{'/shopme/admin/users/edit/' + ${user.id}}"></a>
 
-                    <button type="button" class="btn btn-primary delete-user" th:data-user-id="${user.id}"
+                    <button type="button" class="btn delete-user" th:data-user-id="${user.id}"
                             data-toggle="modal" data-target="#deleteUserModal">
-                        <i class="fas fa-trash fa-2x icon-dark"></i>
+                        <i class="fas fa-trash fa-2x icon-dark" style="color: red"></i>
                     </button>
 
                 </td>
